# side_projects

./: LICENSE  README.md
mega_robo_do_mal/: Cargo.toml  README.md  main.rs
pampobot/: .env  .gitignore  commands.js  main.js  package-lock.json  package.json
pampobot/commands/: APOD.js  CaraCoroa.js  Help.js  Jokenpo.js  LoremIpsum.js  Motivacao.js  Out.js  Roll.js
pampobot/commands/music/: volume.js
pampobot/commands/ownerOnly/: statusUrl.js
pampobot/functions/: Assinatura.js  blockDM.js  checarComando.js  distubeEvents.js  logSlash.js
